test/spec_vectors/return_call/fail/module_10.wat
(module (func $type-second-num-vs-num (return_call 1 (i32.const 1) (f64.const 1))) (func (param f64 i32)))